testsuite/poke.pkl/immutable-diag-2.pk
/* { dg-do compile } */

var IOS_F_WRITE /* { dg-error "already defined" } */
    = 666;
